--- a/src/update/org/cict/layout/adding_changing/adding-changing-home.fxml
+++ b/src/update/org/cict/layout/adding_changing/adding-changing-home.fxml
@@ -416,25 +416,37 @@
             </JFXButton>
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="anchor_main" layoutY="80.0" prefHeight="610.0" prefWidth="298.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="80.0">
+      <AnchorPane fx:id="anchor_main" layoutX="8.0" layoutY="73.0" prefHeight="639.0" prefWidth="306.0" AnchorPane.leftAnchor="0.0">
          <children>
-            <VBox layoutX="65.0" layoutY="383.0" prefHeight="200.0" prefWidth="100.0" spacing="3.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="300.0">
+            <StackPane layoutY="40.0" prefHeight="573.0" prefWidth="304.0" AnchorPane.bottomAnchor="26.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="40.0">
                <children>
-                  <JFXButton fx:id="btn_logout" alignment="BASELINE_LEFT" graphicTextGap="20.0" maxWidth="1.7976931348623157E308" prefHeight="54.0" prefWidth="237.0" style="-fx-background-color: #3B4F6A;" text="Logout" textFill="WHITE">
-                     <font>
-                        <Font size="25.0" />
-                     </font>
-                     <graphic>
-                        <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../../../../../org/cict/evaluation/src/img/Exit_104px.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                  </JFXButton>
+                  <VBox fx:id="vbox_list" prefHeight="623.0" prefWidth="290.0" spacing="3.0" />
+                  <VBox fx:id="vbox_waiting_queue" alignment="BOTTOM_LEFT" prefHeight="532.0" prefWidth="285.0">
+                     <children>
+                        <Label text="Waiting..." textFill="#37474f">
+                           <font>
+                              <Font size="19.0" />
+                           </font>
+                        </Label>
+                        <Line endX="100.0" startX="-100.0" />
+                     </children>
+                     <StackPane.margin>
+                        <Insets bottom="5.0" left="15.0" top="10.0" />
+                     </StackPane.margin>
+                  </VBox>
                </children>
-            </VBox>
+            </StackPane>
+            <Label layoutX="45.0" layoutY="14.0" text="Student Queue" textFill="#37474f" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="10.0">
+               <font>
+                  <Font size="19.0" />
+               </font>
+            </Label>
+            <Label layoutX="17.0" layoutY="592.0" text="Total Enrollee On Queue:" />
+            <Label fx:id="lbl_total_queue" layoutX="153.0" layoutY="592.0" text="10" />
          </children>
+         <padding>
+            <Insets bottom="20.0" />
+         </padding>
       </AnchorPane>
    </children>
 </AnchorPane>
