updated bottom margin of queue table

--- a/src/org/cict/evaluation/evaluation_home.fxml
+++ b/src/org/cict/evaluation/evaluation_home.fxml
@@ -377,7 +377,10 @@
          <children>
             <StackPane layoutY="40.0" prefHeight="558.0" prefWidth="295.0" AnchorPane.bottomAnchor="35.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="40.0">
                <children>
-                  <VBox fx:id="vbox_list" prefHeight="623.0" prefWidth="290.0" spacing="3.0" />
+                  <VBox fx:id="vbox_list" prefHeight="623.0" prefWidth="290.0" spacing="3.0">
+                     <StackPane.margin>
+                        <Insets bottom="10.0" />
+                     </StackPane.margin></VBox>
                   <VBox fx:id="vbox_waiting_queue" alignment="BOTTOM_LEFT" prefHeight="544.0" prefWidth="280.0">
                      <children>
                         <Label text="Waiting..." textFill="#37474f">
