changed assistant to asst. in home and hide post value or designation

--- a/src/sys/org/cict/layout/home/SystemHome.fxml
+++ b/src/sys/org/cict/layout/home/SystemHome.fxml
@@ -281,7 +281,7 @@
                               </Label>
                            </children>
                         </HBox>
-                        <HBox alignment="CENTER_LEFT" prefWidth="280.0">
+                        <HBox alignment="CENTER_LEFT" prefWidth="280.0" visible="false">
                            <children>
                               <Label graphicTextGap="10.0" prefWidth="120.0" text="Post">
                                  <font>
