viewed announced by and updated saving of announcements

--- a/src/sys/org/cict/layout/home/system_variables/SystemValuesRowExtension.fxml
+++ b/src/sys/org/cict/layout/home/system_variables/SystemValuesRowExtension.fxml
@@ -67,6 +67,7 @@
                <children>
                   <HBox alignment="CENTER_RIGHT" spacing="15.0">
                      <children>
+                        <Label fx:id="lbl_announced_by" />
                         <Label fx:id="lbl_count" textFill="#545454">
                            <font>
                               <Font name="System Bold" size="15.0" />
