--- a/src/update5/org/cict/facultyhub/SubjectRowFH.fxml
+++ b/src/update5/org/cict/facultyhub/SubjectRowFH.fxml
@@ -19,11 +19,20 @@
    <children>
       <VBox alignment="CENTER_LEFT" HBox.hgrow="ALWAYS">
          <children>
-            <Label fx:id="lbl_code" text="IT 113">
-               <font>
-                  <Font size="15.0" />
-               </font>
-            </Label>
+            <HBox>
+               <children>
+                  <Label fx:id="lbl_section">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="lbl_code" text="IT 113">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Label>
+               </children>
+            </HBox>
             <Label fx:id="lbl_description" text="Fundamentals of Information Technology">
                <font>
                   <Font size="10.0" />
