--- a/src/org/cict/accountmanager/SystemRegister.fxml
+++ b/src/org/cict/accountmanager/SystemRegister.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox fx:id="application_root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #393D4B;" stylesheets="@../../../sys/org/cict/layout/home/home.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<VBox fx:id="application_root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #393D4B;" stylesheets="@../../../sys/org/cict/layout/home/home.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.cict.accountmanager.RegisterController">
    <children>
       <HBox alignment="CENTER_LEFT" prefHeight="80.0" prefWidth="200.0" style="-fx-background-color: #2E333F;">
          <children>
@@ -114,7 +114,7 @@
                               </HBox>
                               <HBox alignment="CENTER" layoutX="10.0" layoutY="79.0" style="-fx-text-fill: white;">
                                  <children>
-                                    <JFXPasswordField fx:id="txt_password" alignment="CENTER" focusColor="WHITE" labelFloat="true" prefHeight="25.0" prefWidth="311.0" promptText="Password" unFocusColor="WHITE">
+                                    <JFXPasswordField fx:id="txt_password" alignment="CENTER" focusColor="WHITE" labelFloat="true" prefHeight="25.0" prefWidth="311.0" promptText="Password" style="-fx-text-fill: white;" unFocusColor="WHITE">
                                        <font>
                                           <Font size="15.0" />
                                        </font>
@@ -123,7 +123,7 @@
                               </HBox>
                               <HBox alignment="CENTER" layoutX="10.0" layoutY="108.0" style="-fx-text-fill: white;">
                                  <children>
-                                    <JFXPasswordField fx:id="txt_reenterPass" alignment="CENTER" focusColor="WHITE" labelFloat="true" prefHeight="25.0" prefWidth="311.0" promptText="Confirm Password" unFocusColor="WHITE">
+                                    <JFXPasswordField fx:id="txt_reenterPass" alignment="CENTER" focusColor="WHITE" labelFloat="true" prefHeight="25.0" prefWidth="311.0" promptText="Confirm Password" style="-fx-text-fill: white;" unFocusColor="WHITE">
                                        <font>
                                           <Font size="15.0" />
                                        </font>
@@ -142,7 +142,7 @@
                                     <Font size="20.0" />
                                  </font>
                               </JFXButton>
-                              <JFXButton fx:id="btn_Cancel" maxWidth="1.7976931348623157E308" style="-fx-border-color: white; -fx-background-color: #35BA9B;" text="Back" textFill="WHITE">
+                              <JFXButton fx:id="btn_Cancel" maxWidth="1.7976931348623157E308" style="-fx-border-color: white; -fx-background-color: #D84452;" text="Close" textFill="WHITE">
                                  <font>
                                     <Font size="14.0" />
                                  </font>
