--- a/src/org/cict/accountmanager/SystemRecovery.fxml
+++ b/src/org/cict/accountmanager/SystemRecovery.fxml
@@ -77,6 +77,42 @@
                <children>
                   <VBox fx:id="vbox_login" alignment="CENTER" prefHeight="458.0" prefWidth="392.0" spacing="5.0">
                      <children>
+                        <HBox alignment="CENTER" layoutX="10.0" layoutY="90.0">
+                           <children>
+                              <Label alignment="CENTER" text="Security Information">
+                                 <font>
+                                    <Font name="Open Sans" size="29.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                           <VBox.margin>
+                              <Insets bottom="7.0" />
+                           </VBox.margin>
+                        </HBox>
+                        <HBox alignment="CENTER" style="-fx-text-fill: white;">
+                           <children>
+                              <JFXPasswordField fx:id="txt_pin" alignment="CENTER" focusColor="WHITE" prefHeight="25.0" prefWidth="311.0" promptText="Transaction Pin (6 digits)" style="-fx-text-fill: white;" unFocusColor="WHITE">
+                                 <font>
+                                    <Font size="15.0" />
+                                 </font>
+                              </JFXPasswordField>
+                           </children>
+                           <VBox.margin>
+                              <Insets bottom="7.0" />
+                           </VBox.margin>
+                        </HBox>
+                        <HBox alignment="CENTER" layoutX="10.0" layoutY="97.0" style="-fx-text-fill: white;">
+                           <children>
+                              <JFXPasswordField fx:id="txt_confirm_pin" alignment="CENTER" focusColor="WHITE" prefHeight="25.0" prefWidth="311.0" promptText="Confirm Pin (6 digits)" style="-fx-text-fill: white;" unFocusColor="WHITE">
+                                 <font>
+                                    <Font size="15.0" />
+                                 </font>
+                              </JFXPasswordField>
+                           </children>
+                           <VBox.margin>
+                              <Insets bottom="10.0" />
+                           </VBox.margin>
+                        </HBox>
                         <HBox alignment="CENTER">
                            <children>
                               <Label alignment="CENTER" text="Recovery Information">
@@ -86,7 +122,7 @@
                               </Label>
                            </children>
                            <VBox.margin>
-                              <Insets bottom="20.0" />
+                              <Insets bottom="7.0" top="7.0" />
                            </VBox.margin>
                         </HBox>
                         <VBox alignment="CENTER">
@@ -101,7 +137,7 @@
                               <Insets />
                            </VBox.margin>
                         </VBox>
-                        <VBox spacing="20.0">
+                        <VBox spacing="7.0">
                            <children>
                               <HBox alignment="CENTER" style="-fx-text-fill: white;">
                                  <children>
@@ -110,7 +146,7 @@
                               </HBox>
                               <HBox alignment="CENTER" layoutX="10.0" layoutY="79.0" style="-fx-text-fill: white;">
                                  <children>
-                                    <JFXPasswordField fx:id="txt_answer" alignment="CENTER" focusColor="WHITE" labelFloat="true" prefHeight="25.0" prefWidth="311.0" promptText="Answer" style="-fx-text-fill: white;" unFocusColor="WHITE">
+                                    <JFXPasswordField fx:id="txt_answer" alignment="CENTER" focusColor="WHITE" prefHeight="25.0" prefWidth="311.0" promptText="Answer" style="-fx-text-fill: white;" unFocusColor="WHITE">
                                        <font>
                                           <Font size="15.0" />
                                        </font>
@@ -119,7 +155,7 @@
                               </HBox>
                               <HBox alignment="CENTER" layoutX="10.0" layoutY="108.0" style="-fx-text-fill: white;">
                                  <children>
-                                    <JFXPasswordField fx:id="txt_reenter" alignment="CENTER" focusColor="WHITE" labelFloat="true" prefHeight="25.0" prefWidth="311.0" promptText="Confirm Answer" style="-fx-text-fill: white;" unFocusColor="WHITE">
+                                    <JFXPasswordField fx:id="txt_reenter" alignment="CENTER" focusColor="WHITE" prefHeight="25.0" prefWidth="311.0" promptText="Confirm Answer" style="-fx-text-fill: white;" unFocusColor="WHITE">
                                        <font>
                                           <Font size="15.0" />
                                        </font>
@@ -140,7 +176,7 @@
                               </JFXButton>
                            </children>
                            <VBox.margin>
-                              <Insets left="90.0" right="90.0" top="20.0" />
+                              <Insets left="90.0" right="90.0" top="10.0" />
                            </VBox.margin>
                         </VBox>
                      </children>
@@ -231,29 +267,6 @@
                <padding>
                   <Insets left="10.0" />
                </padding>
-            </VBox>
-            <VBox alignment="CENTER_RIGHT" prefHeight="200.0" prefWidth="100.0" HBox.hgrow="ALWAYS">
-               <padding>
-                  <Insets right="20.0" />
-               </padding>
-               <children>
-                  <VBox alignment="CENTER_RIGHT">
-                     <children>
-                        <JFXButton fx:id="btn_settings" styleClass="label" text="Server's IP">
-                           <graphic>
-                              <ImageView fitHeight="27.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@../../../sys/org/cict/layout/home/images/settings.png" />
-                                 </image>
-                              </ImageView>
-                           </graphic>
-                        </JFXButton>
-                     </children>
-                     <VBox.margin>
-                        <Insets top="7.0" />
-                     </VBox.margin>
-                  </VBox>
-               </children>
             </VBox>
          </children>
          <padding>
