--- a/src/update3/org/cict/scheduling/timetable.css
+++ b/src/update3/org/cict/scheduling/timetable.css
@@ -36,7 +36,7 @@
 .row-filler{
     -fx-border-color: white;
     -fx-border-style: dashed;
-    -fx-background-color: #A9AFBB;
+    -fx-background-color: #414852;
 }
 .row-filler-text{
     -fx-text-fill: white;
