--- a/src/org/cict/accountmanager/SystemRecovery.fxml
+++ b/src/org/cict/accountmanager/SystemRecovery.fxml
@@ -50,7 +50,7 @@
                         <Font name="Courier New" size="17.0" />
                      </font>
                   </Label>
-                  <Label text="Evaluation Management System">
+                  <Label text="Enrollment Evaluation Management System">
                      <font>
                         <Font name="Courier New" size="17.0" />
                      </font>
