--- a/src/org/cict/reports/metro-ui-table.css
+++ b/src/org/cict/reports/metro-ui-table.css
@@ -51,9 +51,9 @@
     -fx-border-color: #FFFFFF;
 }
 
-/*
+
 .metro-row:hover{
-    -fx-background-color: #74B1F4;
+    -fx-background-color: #F9A11F;
 }
-*/
+
 
