--- a/src/org/cict/evaluation/evaluation_home.fxml
+++ b/src/org/cict/evaluation/evaluation_home.fxml
@@ -114,7 +114,7 @@
                               </Label>
                            </children>
                         </HBox>
-                        <VBox fx:id="vbox_studentOptions" alignment="CENTER_LEFT" prefHeight="257.0" prefWidth="182.0" style="-fx-background-color: #FFFFFF; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" AnchorPane.rightAnchor="1.0" AnchorPane.topAnchor="100.0">
+                        <VBox fx:id="vbox_studentOptions" alignment="CENTER_LEFT" prefHeight="308.0" prefWidth="182.0" style="-fx-background-color: #FFFFFF; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" AnchorPane.rightAnchor="1.0" AnchorPane.topAnchor="100.0">
                            <children>
                               <JFXButton fx:id="btnHistory" graphicTextGap="14.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="63.0" prefWidth="200.0" stylesheets="@button-hover.css" text="History        " textFill="#414852">
                                  <graphic>
@@ -146,11 +146,23 @@
                                     <Insets left="1.0" right="1.0" />
                                  </VBox.margin>
                               </JFXButton>
-                              <JFXButton fx:id="btn_encoding" graphicTextGap="10.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="63.0" prefWidth="200.0" stylesheets="@button-hover.css" text="Moving Up  " textFill="#414852" VBox.vgrow="ALWAYS">
+                              <JFXButton fx:id="btn_deficiency" graphicTextGap="10.0" layoutX="11.0" layoutY="73.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="63.0" prefWidth="200.0" stylesheets="@button-hover.css" text=" Deficiency   " textFill="#414852">
                                  <graphic>
                                     <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
-                                          <Image url="@src/img/Exam_48px.png" />
+                                          <Image url="@src/img/icons8-scorecard-64.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                                 <font>
+                                    <Font size="15.0" />
+                                 </font>
+                              </JFXButton>
+                              <JFXButton fx:id="btnCreditUnits" graphicTextGap="10.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="63.0" prefWidth="200.0" stylesheets="@button-hover.css" text="Credit Units" textFill="#414852" VBox.vgrow="ALWAYS">
+                                 <graphic>
+                                    <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@src/img/Purchase%20Order_48px.png" />
                                        </image>
                                     </ImageView>
                                  </graphic>
@@ -161,11 +173,11 @@
                                     <Insets left="1.0" right="1.0" />
                                  </VBox.margin>
                               </JFXButton>
-                              <JFXButton fx:id="btnCreditUnits" graphicTextGap="10.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="63.0" prefWidth="200.0" stylesheets="@button-hover.css" text="Credit Units" textFill="#414852" VBox.vgrow="ALWAYS">
+                              <JFXButton fx:id="btn_encoding" graphicTextGap="10.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="63.0" prefWidth="200.0" stylesheets="@button-hover.css" text="Moving Up  " textFill="#414852" VBox.vgrow="ALWAYS">
                                  <graphic>
                                     <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
-                                          <Image url="@src/img/Purchase%20Order_48px.png" />
+                                          <Image url="@src/img/Exam_48px.png" />
                                        </image>
                                     </ImageView>
                                  </graphic>
