--- a/src/update/org/cict/layout/adding_changing/adding-changing-home.fxml
+++ b/src/update/org/cict/layout/adding_changing/adding-changing-home.fxml
@@ -64,7 +64,7 @@
             </HBox>
             <StackPane layoutX="205.0" layoutY="228.0" prefHeight="150.0" prefWidth="200.0" AnchorPane.bottomAnchor="16.0" AnchorPane.leftAnchor="16.0" AnchorPane.rightAnchor="16.0" AnchorPane.topAnchor="82.0">
                <children>
-                  <AnchorPane fx:id="anchor_preview" visible="false">
+                  <AnchorPane fx:id="anchor_preview">
                      <children>
                         <AnchorPane fx:id="anchor_studentInfo" prefHeight="95.0" prefWidth="692.0" style="-fx-background-color: #06693A; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                            <children>
@@ -142,21 +142,6 @@
                         </HBox>
                         <VBox fx:id="vbox_studentOptions" alignment="CENTER_LEFT" prefHeight="257.0" prefWidth="182.0" style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" stylesheets="@adding-table.css" AnchorPane.rightAnchor="1.0" AnchorPane.topAnchor="100.0">
                            <children>
-                              <JFXButton fx:id="btnStudentInfo" graphicTextGap="10.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="63.0" prefWidth="200.0" stylesheets="@button-hover.css" text="Student Info" textFill="WHITE" VBox.vgrow="ALWAYS">
-                                 <VBox.margin>
-                                    <Insets left="1.0" right="1.0" />
-                                 </VBox.margin>
-                                 <graphic>
-                                    <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
-                                       <image>
-                                          <Image url="@img/Info%20Squared_64px.png" />
-                                       </image>
-                                    </ImageView>
-                                 </graphic>
-                                 <font>
-                                    <Font size="15.0" />
-                                 </font>
-                              </JFXButton>
                               <JFXButton fx:id="btnHistory" graphicTextGap="14.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="63.0" prefWidth="200.0" stylesheets="@button-hover.css" text="History        " textFill="WHITE">
                                  <graphic>
                                     <ImageView fitHeight="32.0" fitWidth="34.0" pickOnBounds="true" preserveRatio="true">
@@ -187,6 +172,21 @@
                                     <Insets left="1.0" right="1.0" />
                                  </VBox.margin>
                               </JFXButton>
+                              <JFXButton fx:id="btnStudentInfo" graphicTextGap="10.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="63.0" prefWidth="200.0" stylesheets="@button-hover.css" text="Deficiency   " textFill="WHITE" VBox.vgrow="ALWAYS">
+                                 <VBox.margin>
+                                    <Insets left="1.0" right="1.0" />
+                                 </VBox.margin>
+                                 <graphic>
+                                    <ImageView fitHeight="78.0" fitWidth="34.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@img/icons8-scorecard-64.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                                 <font>
+                                    <Font size="15.0" />
+                                 </font>
+                              </JFXButton>
                               <JFXButton fx:id="btnCreditUnits" graphicTextGap="10.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="63.0" prefWidth="200.0" stylesheets="@button-hover.css" text="Grades        " textFill="WHITE" VBox.vgrow="ALWAYS">
                                  <graphic>
                                     <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
@@ -206,7 +206,7 @@
                         </VBox>
                      </children>
                   </AnchorPane>
-                  <AnchorPane fx:id="anchor_results">
+                  <AnchorPane fx:id="anchor_results" visible="false">
                      <children>
                         <HBox fx:id="hbox_search" alignment="CENTER_LEFT" layoutX="1.0" layoutY="180.0" prefHeight="100.0" prefWidth="200.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="100.0">
                            <children>
