--- a/src/update/org/cict/layout/adding_changing/adding-changing-home.fxml
+++ b/src/update/org/cict/layout/adding_changing/adding-changing-home.fxml
@@ -64,7 +64,7 @@
             </HBox>
             <StackPane layoutX="205.0" layoutY="228.0" prefHeight="150.0" prefWidth="200.0" AnchorPane.bottomAnchor="16.0" AnchorPane.leftAnchor="16.0" AnchorPane.rightAnchor="16.0" AnchorPane.topAnchor="82.0">
                <children>
-                  <AnchorPane fx:id="anchor_preview">
+                  <AnchorPane fx:id="anchor_preview" visible="false">
                      <children>
                         <AnchorPane fx:id="anchor_studentInfo" prefHeight="95.0" prefWidth="692.0" style="-fx-background-color: #06693A; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                            <children>
@@ -206,7 +206,7 @@
                         </VBox>
                      </children>
                   </AnchorPane>
-                  <AnchorPane fx:id="anchor_results" visible="false">
+                  <AnchorPane fx:id="anchor_results">
                      <children>
                         <HBox fx:id="hbox_search" alignment="CENTER_LEFT" layoutX="1.0" layoutY="180.0" prefHeight="100.0" prefWidth="200.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="100.0">
                            <children>
