--- a/src/update5/org/cict/student/layout/student-home.fxml
+++ b/src/update5/org/cict/student/layout/student-home.fxml
@@ -21,9 +21,9 @@
          <children>
             <VBox alignment="CENTER_RIGHT">
                <children>
-                  <HBox alignment="CENTER_RIGHT">
+                  <HBox alignment="CENTER_RIGHT" spacing="10.0">
                      <children>
-                        <HBox alignment="BOTTOM_LEFT" prefHeight="37.0" prefWidth="881.0" spacing="5.0" HBox.hgrow="ALWAYS">
+                        <HBox alignment="BOTTOM_LEFT" prefHeight="41.0" prefWidth="703.0" spacing="5.0" HBox.hgrow="ALWAYS">
                            <children>
                               <Label prefHeight="17.0" prefWidth="435.0" text=" " />
                               <Label text="Search by">
@@ -34,6 +34,7 @@
                               <ComboBox fx:id="cmb_category" prefHeight="0.0" prefWidth="191.0" styleClass="metro-combo-box" />
                            </children>
                         </HBox>
+                        <JFXButton fx:id="btn_new_student1" prefHeight="46.0" prefWidth="259.0" styleClass="metro-nav-button" text="New Student" />
                         <JFXButton fx:id="btn_home1" prefHeight="46.0" prefWidth="259.0" styleClass="metro-nav-button" text="Back" />
                      </children>
                   </HBox>
@@ -163,7 +164,12 @@
          <children>
             <VBox alignment="CENTER_RIGHT">
                <children>
-                  <JFXButton fx:id="btn_home" prefHeight="46.0" prefWidth="259.0" styleClass="metro-nav-button" text="Home" />
+                  <HBox alignment="CENTER_RIGHT" spacing="10.0">
+                     <children>
+                        <JFXButton fx:id="btn_new_student" prefHeight="46.0" prefWidth="259.0" styleClass="metro-nav-button" text="New Student" />
+                        <JFXButton fx:id="btn_home" prefHeight="46.0" prefWidth="259.0" styleClass="metro-nav-button" text="Home" />
+                     </children>
+                  </HBox>
                </children>
                <VBox.margin>
                   <Insets left="20.0" right="28.0" top="7.0" />
